<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_V1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_V2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.26"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_V3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_V4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_V5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.74"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/GL_V6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:text="Calculator"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textStyle="bold|italic" />

    <TextView
        android:id="@+id/cal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text=""
        android:gravity="end"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="="
        android:gravity="end"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cal" />


    <Button
        android:id="@+id/btn_MR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="MR"
        android:textColor="#0A0909"
        android:autoSizeMinTextSize="2sp"
        android:textSize="2sp"
        android:autoSizeMaxTextSize="18sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V2"
        app:layout_constraintLeft_toLeftOf="@id/GL_V1"
        app:layout_constraintTop_toBottomOf="@id/result"/>

    <Button
        android:id="@+id/btn_EXP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exp"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V3"
        app:layout_constraintLeft_toLeftOf="@id/GL_V2"
        app:layout_constraintTop_toBottomOf="@id/result"/>

    <Button
        android:id="@+id/btn_PI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pi"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V4"
        app:layout_constraintLeft_toLeftOf="@id/GL_V3"
        app:layout_constraintTop_toBottomOf="@id/result"/>

    <Button
        android:id="@+id/btn_MOD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/modulo"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V5"
        app:layout_constraintLeft_toLeftOf="@id/GL_V4"
        app:layout_constraintTop_toBottomOf="@id/result"/>

    <Button
        android:id="@+id/btn_MULT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V6"
        app:layout_constraintLeft_toLeftOf="@id/GL_V5"
        app:layout_constraintTop_toBottomOf="@id/result"/>


    <Button
        android:id="@+id/btn_MC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="MC"
        android:textSize="8sp"
        android:autoSizeMinTextSize="2sp"
        android:autoSizeTextType="uniform"
        android:textColor="#0A0909"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V2"
        app:layout_constraintLeft_toLeftOf="@id/GL_V1"
        app:layout_constraintTop_toBottomOf="@id/btn_MR"/>

    <Button
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="7"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V3"
        app:layout_constraintLeft_toLeftOf="@id/GL_V2"
        app:layout_constraintTop_toBottomOf="@id/btn_EXP"/>

    <Button
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="8"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V4"
        app:layout_constraintLeft_toLeftOf="@id/GL_V3"
        app:layout_constraintTop_toBottomOf="@id/btn_PI"/>

    <Button
        android:id="@+id/btn_9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="9"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V5"
        app:layout_constraintLeft_toLeftOf="@id/GL_V4"
        app:layout_constraintTop_toBottomOf="@id/btn_MOD"/>

    <Button
        android:id="@+id/btn_DIV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V6"
        app:layout_constraintLeft_toLeftOf="@id/GL_V5"
        app:layout_constraintTop_toBottomOf="@id/btn_MULT"/>

    <Button
        android:id="@+id/btn_Mplus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="M+"
        android:textSize="8sp"
        android:autoSizeMinTextSize="2sp"
        android:autoSizeTextType="uniform"
        android:textColor="#0A0909"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V2"
        app:layout_constraintLeft_toLeftOf="@id/GL_V1"
        app:layout_constraintTop_toBottomOf="@id/btn_MC"/>

    <Button
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="4"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V3"
        app:layout_constraintLeft_toLeftOf="@id/GL_V2"
        app:layout_constraintTop_toBottomOf="@id/btn_7"/>

    <Button
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="5"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V4"
        app:layout_constraintLeft_toLeftOf="@id/GL_V3"
        app:layout_constraintTop_toBottomOf="@id/btn_8"/>

    <Button
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="6"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V5"
        app:layout_constraintLeft_toLeftOf="@id/GL_V4"
        app:layout_constraintTop_toBottomOf="@id/btn_9"/>

    <Button
        android:id="@+id/btn_PLUS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V6"
        app:layout_constraintLeft_toLeftOf="@id/GL_V5"
        app:layout_constraintTop_toBottomOf="@id/btn_DIV"/>

    <Button
        android:id="@+id/btn_Mminus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="M-"
        android:textSize="8sp"
        android:autoSizeMinTextSize="2sp"
        android:autoSizeTextType="uniform"
        android:textColor="#0A0909"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V2"
        app:layout_constraintLeft_toLeftOf="@id/GL_V1"
        app:layout_constraintTop_toBottomOf="@id/btn_Mplus"/>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="1"

        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V3"
        app:layout_constraintLeft_toLeftOf="@id/GL_V2"
        app:layout_constraintTop_toBottomOf="@id/btn_4"/>

    <Button
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V4"
        app:layout_constraintLeft_toLeftOf="@id/GL_V3"
        app:layout_constraintTop_toBottomOf="@id/btn_5"/>

    <Button
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="3"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V5"
        app:layout_constraintLeft_toLeftOf="@id/GL_V4"
        app:layout_constraintTop_toBottomOf="@id/btn_6"/>

    <Button
        android:id="@+id/btn_MINUS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V6"
        app:layout_constraintLeft_toLeftOf="@id/GL_V5"
        app:layout_constraintTop_toBottomOf="@id/btn_PLUS"/>

    <Button
        android:id="@+id/btn_C"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="C"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V2"
        app:layout_constraintLeft_toLeftOf="@id/GL_V1"
        app:layout_constraintTop_toBottomOf="@id/btn_Mminus"/>

    <Button
        android:id="@+id/btn_CE"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="CE"
        android:textSize="8sp"
        android:autoSizeMinTextSize="2sp"
        android:autoSizeTextType="uniform"
        android:textColor="#0A0909"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V3"
        app:layout_constraintLeft_toLeftOf="@id/GL_V2"
        app:layout_constraintTop_toBottomOf="@id/btn_1"/>

    <Button
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V4"
        app:layout_constraintLeft_toLeftOf="@id/GL_V3"
        app:layout_constraintTop_toBottomOf="@id/btn_2"/>

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V5"
        app:layout_constraintLeft_toLeftOf="@id/GL_V4"
        app:layout_constraintTop_toBottomOf="@id/btn_3"/>

    <Button
        android:id="@+id/btn_EQUAL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:textColor="#0A0909"
        android:autoSizeTextType="uniform"
        android:background="@drawable/circularbutton"
        app:layout_constraintRight_toRightOf="@id/GL_V6"
        app:layout_constraintLeft_toLeftOf="@id/GL_V5"
        app:layout_constraintTop_toBottomOf="@id/btn_MINUS"/>

</androidx.constraintlayout.widget.ConstraintLayout>